# categen

./: .changelog  .flake8  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  test.yaml
src/categen/: __init__.py  __main__.py  categen.py  catentry.py  cli.py  data.py  entry.txt
tests/: __init__.py  genall.py  generation.py  genimg.py  gentxt.py  git.py  pickle.py  utils.py
tests/utils/: datadir.py
