[tool.poetry]
name = "iicategen"
version = "2.1.1"
description = "A Catalogue Entry Generator for interesting images."
authors = ["hysrx <github@rxyth.co>"]
license = "MIT"
packages = [
    { include = 'categen', from = 'src' }
]

[tool.poetry.scripts]
categen = "categen.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
hentai = "^3.1.4"
iipp = "^1.1.0"
GitPython = "^3.1.11"
tomlkit = "^0.7.0"
colorama = "^0.4.4"
dill = "^0.3.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
